--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,4 +6,4 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./docker-feather-data/sqlite:/var/feather
+      - "./datadir/sqlite:/var/feather"
