--- a/docker/postgres.yml
+++ b/docker/postgres.yml
@@ -38,4 +38,4 @@ services:
     volumes:
       - "./datadir/postgres:/var/feather"
       - "./scripts/waitfor:/opt/feather/waitfor"
-    command: sh -c "/opt/feather/waitfor database && /opt/feather/start"
+    command: sh -c "/opt/feather/waitfor database 30 && /opt/feather/start"
