--- a/docker/postgres.yml
+++ b/docker/postgres.yml
@@ -7,7 +7,7 @@ services:
     container_name: postgres
     image: postgres
     volumes:
-      - "./datadir/mysql/db:/var/lib/postgresql/data"
+      - "./datadir/postgres/db:/var/lib/postgresql/data"
       - "./scripts/1-postgres-init.sql:/docker-entrypoint-initdb.d/1.sql"
     environment:
       POSTGRES_PASSWORD: postgres
